--- a/src/scss/blocks/nav.scss
+++ b/src/scss/blocks/nav.scss
@@ -4,6 +4,7 @@
 .nav {
   @media screen and (max-width: 1023px) {
     display: none;
+    height: 0;
   }
   &.open {
     @media screen and (max-width: 1023px) {
