--- a/src/scss/blocks/main-header.scss
+++ b/src/scss/blocks/main-header.scss
@@ -7,7 +7,7 @@
   width: 375px;
   height: 960px;
   background: url('../../src/images/header-Photo-mob-back.png');
-  z-index: -1;
+  z-index: 0;
   position: relative;
   margin-bottom: 40px;
 
@@ -142,11 +142,11 @@
 
     @media screen and (min-width: 1024px) {
       &:hover {
-        background: #0048CE;
+        background: #0048ce;
         cursor: pointer;
       }
       &:active {
-        background: #003AA6;
+        background: #003aa6;
       }
     }
   }
