--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -35,6 +35,7 @@ select {
   margin-top: 3px;
   @media screen and (max-width: 1023px) {
     width: 154px;
+    height: 128px;
     &:selection {
       background: #e5e5e5;
     }
