--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -27,6 +27,9 @@ a:hover {
 }
 
 select {
+  appearance: none; /* Убираем стандартный стиль */
+  -webkit-appearance: none; /* Для WebKit-браузеров */
+  -moz-appearance: none;
   width: 18px;
   border: none;
   background: #e5e5e5;
