--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -37,11 +37,14 @@ select {
   margin-left: 5px;
   margin-top: 3px;
   @media screen and (max-width: 1023px) {
+    appearance: none; /* Убираем стандартный стиль */
+    -webkit-appearance: none; /* Для WebKit-браузеров */
+    -moz-appearance: none;
     width: 154px;
-    height: 128px;
-    &:selection {
-      background: #e5e5e5;
-    }
+    height: 100%;
+    // &:selection {
+    //   background: #e5e5e5;
+    // }
   }
 
   &:focus {
