mob убран select, добавлен ul

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,7 @@
 
 @use 'blocks/burger.scss';
 @use 'blocks/page-header.scss';
+@use 'blocks/mob-select.scss';
 @use 'blocks/logo.scss';
 @use 'blocks/nav.scss';
 @use 'blocks/nav-social.scss';
