--- a/src/scss/blocks/nav.scss
+++ b/src/scss/blocks/nav.scss
@@ -84,20 +84,13 @@
   }
 
   &__select-list {
-    @media screen and (max-width: 1023px) {
-      width: 154px;
-      height: 128px;
-      display: flex;
-      background-color: variables.$whiteText;
-      margin-top: 10px;
-      list-style: none;
-      @media screen and (min-width: 1024px) {
-        display: block;
-        color: #0048ce;
-        background-color: #f1f4fd;
-      }
-    }
+   
 
+    // @media screen and (min-width: 1024px) {
+    //   display: block;
+    //   color: #0048ce;
+    //   background-color: #f1f4fd;
+    // }
     &__list-item {
       @media screen and (min-width: 320px) {
         display: block;
@@ -107,18 +100,6 @@
       display: flex;
       color: variables.$blueText;
       position: relative;
-      // &--select {
-      //   width: 3px;
-      //   height: 3px;
-      //   border-top: 1px solid variables.$blueText;
-      //   border-right: 1px solid variables.$blueText;
-      //   margin-right: 60px;
-      //   right: 100px;
-      //   position: absolute;
-      //   transform: rotate(135deg);
-      //   left: 120px;
-      //   top: 10px;
-      // }
     }
 
     &--link {
@@ -172,5 +153,10 @@
   &__list-item--link {
     text-decoration: none;
     color: variables.$blueText;
+  }
+  &__list-item--select {
+    @media screen and (max-width: 1023px) {
+      display: none;
+    }
   }
 }
