--- a/src/scss/blocks/nav.scss
+++ b/src/scss/blocks/nav.scss
@@ -84,7 +84,10 @@
   }
 
   &__select-list {
-   
+   @media screen and (max-width: 1023px) {
+    display: none;
+    
+   }
 
     // @media screen and (min-width: 1024px) {
     //   display: block;
