--- a/src/scss/blocks/page-header.scss
+++ b/src/scss/blocks/page-header.scss
@@ -9,6 +9,7 @@
   align-items: center;
   padding-top: 18px;
   z-index: 6;
+  background-color: #FFFFFF;
 
   @media screen and (min-width: 1024px) {
     width: 1280px;
@@ -19,6 +20,8 @@
     justify-content: space-between;
     margin: 0 auto;
     height: 76px;
+    background-color: #E5E5E5;
+
   }
 
   &__btn {
@@ -27,10 +30,11 @@
     background-color: variables.$whiteText;
     padding-left: 110px;
     @include fonts.golosFont;
+    background-color: #FFFFFF;
 
     @media screen and (min-width: 1024px) {
       padding: 0;
-      background-color: #e5e5e5;
+      background-color: #E5E5E5;
       text-decoration: underline;
     }
   }
