--- a/src/scss/blocks/page-main.scss
+++ b/src/scss/blocks/page-main.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #E5E5E5;
+    background-color: #FFFFFF;
 
 
     
