--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -11,7 +11,7 @@ body {
 
   @media screen and (min-width: 1024px) {
     width: 1440px;
-    background-color: #E5E5E5;
+    background-color: #e5e5e5;
   }
 }
 
