--- a/src/scss/blocks/card.scss
+++ b/src/scss/blocks/card.scss
@@ -10,7 +10,7 @@
   margin: 0 auto;
   margin-bottom: 20px;
   text-align: center;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-radius: 20px;
 
   @media screen and (min-width: 1024px) {
@@ -24,7 +24,6 @@
         height: auto;
         border: none;
         border-radius: 10px;
-
       }
     }
   }
