--- a/src/scss/blocks/logo.scss
+++ b/src/scss/blocks/logo.scss
@@ -14,7 +14,7 @@
 
   @media screen and (min-width: 1024px) {
     font-size: 36px;
-line-height: 50px; 
+    line-height: 50px;
     margin-right: 175px;
   }
 }
@@ -31,6 +31,7 @@ line-height: 50px;
 
   @media screen and (min-width: 1024px) {
     margin-bottom: 74px;
-font-size: 36px;
-line-height: 50px;  }
+    font-size: 36px;
+    line-height: 50px;
+  }
 }
