--- a/src/scss/blocks/page-main.scss
+++ b/src/scss/blocks/page-main.scss
@@ -2,12 +2,9 @@
 @use '../variables';
 
 .page__main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #FFFFFF;
-
-
-    
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff;
 }
