--- a/src/scss/blocks/workers.scss
+++ b/src/scss/blocks/workers.scss
@@ -7,9 +7,8 @@
 
   @media screen and (min-width: 1024px) {
     width: 1280px;
-    background-color: #E5E5E5;
-margin-bottom: 80px;
-    
+    background-color: #e5e5e5;
+    margin-bottom: 80px;
   }
 
   &__title {
@@ -33,7 +32,6 @@ margin-bottom: 80px;
       display: flex;
       flex-direction: row;
       gap: 40px;
-      
     }
   }
 
@@ -42,7 +40,8 @@ margin-bottom: 80px;
     left: 20px;
   }
 
-  &__list-1, &__list-2{
+  &__list-1,
+  &__list-2 {
     margin-bottom: 40px;
   }
 }
